@@ -8,6 +8,7 @@ Change Log:
 ----------------------------------------------------------------------
 - Fix rewrite rules on plugin update/activation (solves payment-issues)
 - Fix PayPal Single settings did not save email address in rare cases
+- Improve the [ms-memberhship-buy] shortcode to also work for guests
 
 1.0.4.6
 ----------------------------------------------------------------------
